--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -28,14 +28,23 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/x-data-grid": "^7.23.5",
+    "@tanstack/react-query": "^5.62.15",
     "electron-updater": "^6.1.7",
+    "lodash": "^4.17.21",
+    "mathjs": "^14.0.1",
+    "papaparse": "^5.4.1",
+    "simple-statistics": "^7.8.7",
+    "statistics.js": "^1.0.0",
+    "uuid": "^11.0.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20.14.8",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
