--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@mui/x-charts": "^7.23.2",
     "@mui/x-data-grid": "^7.23.5",
     "@tanstack/react-query": "^5.62.15",
     "electron-updater": "^6.1.7",
