--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -36,6 +36,7 @@
     "papaparse": "^5.4.1",
     "simple-statistics": "^7.8.7",
     "statistics.js": "^1.0.0",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.3",
     "zustand": "^5.0.2"
   },
