--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -30,6 +30,7 @@
     "@mui/x-charts": "^7.23.2",
     "@mui/x-data-grid": "^7.23.5",
     "@tanstack/react-query": "^5.62.15",
+    "color-interpolate": "^1.0.5",
     "electron-updater": "^6.1.7",
     "lodash": "^4.17.21",
     "mathjs": "^14.0.1",
@@ -37,6 +38,7 @@
     "simple-statistics": "^7.8.7",
     "statistics.js": "^1.0.0",
     "tailwind-merge": "^2.6.0",
+    "terminate": "^2.8.0",
     "uuid": "^11.0.3",
     "zustand": "^5.0.2"
   },
