colors and netron

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "[csv]": {
-        "editor.inlayHints.maximumLength": 0
-    }
+  "[csv]": {
+    "editor.inlayHints.maximumLength": 0
+  },
+  "python.defaultInterpreterPath": "estimatik-app/.venv/bin/python"
 }
