--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -34,6 +34,7 @@
     "electron-updater": "^6.1.7",
     "lodash": "^4.17.21",
     "mathjs": "^14.0.1",
+    "mkdirp": "^3.0.1",
     "papaparse": "^5.4.1",
     "simple-statistics": "^7.8.7",
     "statistics.js": "^1.0.0",
