--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -13,6 +13,7 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
+    "publish": "electron-builder --win -p always",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -66,5 +67,16 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/keenplify/estimatik.git"
+  },
+  "build": {
+    "win": {
+      "publish": [
+        "github"
+      ]
+    }
   }
 }
