--- a/estimatik-app/dev-app-update.yml
+++ b/estimatik-app/dev-app-update.yml
@@ -1,3 +1,2 @@
-provider: generic
-url: https://example.com/auto-updates
-updaterCacheDirName: estimatik-app-updater
+provider: github
+repo: estimatik
