--- a/estimatik-app/package.json
+++ b/estimatik-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estimatik-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.62.15",
     "color-interpolate": "^1.0.5",
     "electron-updater": "^6.1.7",
+    "hazardous": "^0.3.0",
     "lodash": "^4.17.21",
     "mathjs": "^14.0.1",
     "mkdirp": "^3.0.1",
@@ -73,6 +74,7 @@
     "url": "git+https://github.com/keenplify/estimatik.git"
   },
   "build": {
+    "asar": false,
     "win": {
       "publish": [
         "github"
